apps/grafana-operator/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana-operator
  labels:
    app.kubernetes.io/name: grafana-operator
