apps/grafana-operator/base/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-operator-to-grafana
  namespace: grafana-operator
spec:
  selector:
      app.kubernetes.io/name: grafana-operator
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/grafana-shared/sa/grafana"]
